--- a/index.css
+++ b/index.css
@@ -1,22 +1,80 @@
-* {
-    width:100%;
+body{
+ 
+}
+#root{
+    height: 1080px;
+    background-color: #CCCCCC;
 }
 
+/*왼쪽*/
+.left{
+    width:15%;
+    height:75%;
+    float: left;
+}
+/*오른쪽*/
+.right{
+    width: 85%;
+    height: 75%;
+    float: left;
+}
 
+/*오른쪽에 있는 헤더*/
 
-.header{
-
+/*오른쪽에 있는 컨텐츠*/
+.content{
+    height: 83%;
 }
 
 .menu{
-    width:20%;
+    margin-top: 50px;
+}
+.menuTab{
+    margin-top: 100px;
+}
+#menuTitle{
+    font-size: 40px;
+    text-align: center;
+}
+.nav-item{
+    color: #000000;
+    text-align: center;
+    font-size: 30px;
+}
+.nav-item:hover{
+    cursor: pointer;
+}
+  
+  .content_main {
+    /* background-color: aqua; */
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  
+  .box1 {
+    margin-right: 5px;
+    width: 48%;
+    height: 500px;
+    /* background-color: green; */
+  
+ 
+  }
+
+  .box1 > .card {
     height: 100%;
-    border:1px;
-}
+  }
+  
+  .box2 {
+    margin-left: 5px;
+    width: 48%;
+    height:  500px;
+    /* background-color: aquamarine; */
+  }
 
-.content{
-
-}
-
-
-
+  .box2 > .card {
+    height: 100%;
+  }
