--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,15 @@
 
     </head>
     <body>
+     
+        <div class="bubble b1"></div>
+        <div class="bubble b2"></div>
+        <div class="bubble b3"></div>
+        <div class="bubble b4"></div>
+        <div class="bubble b5"></div>
+        <div class="bubble b6"></div>
+        <div class="bubble b7"></div>
+
         <!-- partial:index.partial.html -->
         <!-- about -->
             <div class="about"> <a class="bg_links social portfolio" href="https://www.rafaelalucas.com/dailyui" target="_blank">
@@ -31,12 +40,14 @@
         <!-- end about -->
 
         <div class="wrapper">
-         
+            
             <section class="module-team">
-                
+                <p>현재날씨: <span id="temp">36</span>°C</p>
 
                 <div class="team">
-                    <h2 class="title">Meet our Team</h2>
+                    <h2 class="title">🐦7면조 Profile🐦</h2>
+                  
+
                     
                     <div
                         class="team-cards">
@@ -67,10 +78,18 @@
                                     <form class="custom-form contact-form mb-5 mb-lg-0" method="post" role="form">
                                         <div class="contact-form-body">
                                             <div  class="row">
-                                                <div class="col-lg-6 col-md-6 col-12">
+                                                <div id="top" class="col-lg-6 col-md-6 col-12">
+                                                    <select id="face">
+                                                    
+                                                    <option selected>🎈</option>
+                                                    <option value="1">😀</option>
+                                                    <option value="2" >🥰</option>
+                                                    <option  value="3">🤗</option>
+                                                    
+                                                  </select>
                                                     <input type="text" name="contact-name" id="name" class="form-control" placeholder="name" required="">
                                                 </div>
-                                                <div class="col-lg-6 col-md-6 col-12">
+                                                <div>
                                                     <input type="text" name="contact-company" type="password" id="pass" class="form-control" placeholder="password" required="">
                                                 </div>
                                           
