feat:댓글 수정기능

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
                                                     <input type="text" name="contact-name" id="name" class="form-control" placeholder="name" required="">
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 col-12">
-                                                    <input type="text" name="contact-company" type="password" id="pass" class="form-control" placeholder="password" required="">
+                                                    <input type="text" name="contact-company" type="password" id="password" class="form-control" placeholder="password" required="">
                                                 </div>
                                           
                                                 <textarea name="contact-message" rows="3" class="form-control" id="message" placeholder="Message"></textarea>
