댓글 삭제 수정 이모티콘 정렬 , 댓글 새 이모티콘 완료

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,10 +81,12 @@
                                                 <div id="top" class="col-lg-6 col-md-6 col-12">
                                                     <select id="face">
                                                     
-                                                    <option selected>🎈</option>
-                                                    <option value="1">😀</option>
-                                                    <option value="2" >🥰</option>
-                                                    <option  value="3">🤗</option>
+                                                    <option selected>🐦</option>
+                                                    <option value="🐤">🐤</option>
+                                                    <option value="🕊️" >🕊️</option>
+                                                    <option  value="🦜">🦜</option>
+                                                    <option  value="🦉">🦉</option>
+                                                    <option  value="🦚">🦚</option>
                                                     
                                                   </select>
                                                     <input type="text" name="contact-name" id="name" class="form-control" placeholder="name" required="">
