--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         
         <meta charset="UTF-8">
-        <title>CodePen - Daily UI #006 - Profile</title>
+        <title>7면조 팀을 소개합니다!</title>
         <link href="../static/css/bootstrap.min.css" rel="stylesheet">
         <link href="../static/css/templatemo-festava-live.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -42,11 +42,12 @@
         <div class="wrapper">
             
             <section class="module-team">
-                <p>현재날씨: <span id="temp">36</span>°C</p>
+          
 
                 <div class="team">
 
                     <h2 class="title">🐦7면조 Profile🐦</h2>
+                    <p class="weather">현재날씨: <span id="temp">36</span>°C</p>
                   
 
 
@@ -96,7 +97,7 @@
                                                 </div>
 
                                               
-                                                <div class="col-lg-6 col-md-6 col-12">
+                                                <div >
                                                     <input type="text" name="contact-company" type="password" id="password" class="form-control" placeholder="password" required="">
 
                                                 </div>
