--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        
         <meta charset="UTF-8">
         <title>7면조 팀을 소개합니다!</title>
+
         <link href="../static/css/bootstrap.min.css" rel="stylesheet">
         <link href="../static/css/templatemo-festava-live.css" rel="stylesheet">
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css'>
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css'>
+        <link rel="stylesheet" href="../static/css/jquery.mCustomScrollbar.min.css">
+        <link rel="stylesheet" href="../static/css/style.css">
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.4.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css'>
-        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css'><link rel="stylesheet" href="../static/css/style.css">
+        <script src="../static/js/jquery.mCustomScrollbar.concat.min.js"></script>
         <script src="../static/js/index.js"></script>
-
     </head>
     <body>
-     
-        <div class="bubble b1"></div>
-        <div class="bubble b2"></div>
-        <div class="bubble b3"></div>
-        <div class="bubble b4"></div>
-        <div class="bubble b5"></div>
-        <div class="bubble b6"></div>
-        <div class="bubble b7"></div>
+        <div class="bubble_wrap">
+            <div class="bubble b1"></div>
+            <div class="bubble b2"></div>
+            <div class="bubble b3"></div>
+            <div class="bubble b4"></div>
+            <div class="bubble b5"></div>
+            <div class="bubble b6"></div>
+            <div class="bubble b7"></div>
+        </div>
 
         <!-- partial:index.partial.html -->
         <!-- about -->
@@ -82,7 +86,7 @@
                                     <form class="custom-form contact-form mb-5 mb-lg-0" method="post" role="form">
                                         <div class="contact-form-body">
                                             <div  class="row">
-                                                <div id="top" class="col-lg-6 col-md-6 col-12">
+                                                <div id="top" class="col-lg-6 col-md-6 col-12 px-0">
                                                     <select id="face">
                                                     
                                                     <option selected>🐦</option>
@@ -97,7 +101,7 @@
                                                 </div>
 
                                               
-                                                <div >
+                                                <div class="px-0">
                                                     <input type="text" name="contact-company" type="password" id="password" class="form-control" placeholder="password" required="">
 
                                                 </div>
@@ -114,13 +118,8 @@
                                 </div>
                             </div>
                             <!-- 우측(댓글 리스트) -->
-                            <div id="right"  class="d-flex row" style="max-width: 400px;">
-
-                                <div id="comment-list"  style="min-width: 300px; ">
-                                    
-                                </div>
-                                
-
+                            <div id="right"  class="mCustomScrollbar d-flex row"  data-mcs-theme="minimal-dark" style="max-width: 400px;">
+                                <div id="comment-list"  style="min-width: 300px; "></div>
                             </div>
                         </div>
                     </div>
