좋아요기능

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,12 +38,10 @@
                 <div class="team">
                     <h2 class="title">칠면조팀</h2>
                     
-                    <div
-                        class="team-cards">
+                    <div class="team-cards">
 
                         <!-- Slider main container -->
-                        <div
-                            class="swiper-container">
+                        <div class="swiper-container">
                             <!-- Additional required wrapper -->
                             <div class="swiper-wrapper"></div>
 
@@ -104,3 +102,9 @@
         </section>
       </body>
 </html></div><!-- partial --><script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js'></script><script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js'></script><script src="../static/js/script.js"></script></body></html>
+
+
+
+
+
+
