--- a/static/css/style.css
+++ b/static/css/style.css
@@ -429,7 +429,7 @@ body {
   width: 24px;
   height: 24px;
   position: absolute;
-  z-index: 2;
+  z-index: 9999;
   right: 20px;
   top: 20px;
   display: flex;
@@ -1182,4 +1182,13 @@ body {
   z-index: 0;
   width: 100%;
   height: 100%;
+}
+#heart {
+  text-align: right;
+    display: block;
+    font-size: 15px;
+}
+
+.heart {
+  margin-top: -25px;
 }
